# tpli

./: .CMakeLists.txt.swp  CMakeLists.txt
fileio/: CMakeLists.txt  seek_io.c  tee.c
lib/: CMakeLists.txt  ename.c.inc  error_functions.c  error_functions.h  error_functions.s  get_num.c  get_num.h  tlpi_hdr.h
samples/: CMakeLists.txt  copy.c  lseek_io.c  lseek_test.c  read_test.c  read_test_eof.c
